# oneword

./: .env.sample  .envrc  .gitignore  Cargo.toml  Dockerfile  Readme.md  flake.nix
.github/workflows/: deploy-docker.yml
entity/: Cargo.toml
entity/src/: channel.rs  guild.rs  lib.rs  oauth.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20221124_000001_create_guild.rs  m20221124_000002_create_channel.rs  m20221124_000003_create_oauth.rs  m20260630_205249_add_footer_config.rs
src/: bot.rs  db.rs  logger.rs  main.rs  server.rs  util.rs
src/commands/: mod.rs  publication.rs
src/commands/activation/: activate.rs  deactivate.rs  mod.rs
src/commands/configure/: footer.rs  mastodon.rs  mod.rs
src/commands/info/: help.rs  list.rs
src/commands/publication/: mastodon.rs  mod.rs
src/commands/watcher/: unwatch.rs  watch.rs
src/events/: mod.rs  on_channel_delete.rs  on_guild_delete.rs  on_message.rs
src/macros/: interaction.rs
src/oauth/: common.rs  mod.rs  router.rs
src/oauth/providers/: mod.rs
src/oauth/providers/mastodon/: mod.rs  router.rs
