[package]
name = "oneword"
repository = "https://github.com/bricksoft/oneword"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
poise = "0.5.0"
tokio = { version = "1.22.0", features = ["tokio-macros", "rt-multi-thread"] }
migration = { path = "./migration" }
entity = { path = "./entity" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
axum = { version = "0.6.0", features = ["macros"] }
hyper = { version = "0.14.23", features = ["tcp"] }
ureq = { version = "2.5.0", features = ["json", "serde"] }
oauth2 = "4.3.0"
regex = "1.7.0"
lazy_static = "1.4.0"
serde_with = { version = "2.1.0", features = ["json"] }
reqwest = { version = "0.11.13", features = ["json"] }
