[package]
name = "oneword"
repository = "https://github.com/peanutbother/oneword"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.10", features = ["macros"] }
entity = { path = "./entity" }
env_logger = "0.10.0"
hyper = { version = "0.14.25", features = ["tcp"] }
lazy_static = "1.4.0"
log = "0.4.17"
migration = { path = "./migration" }
oauth2 = "4.3.0"
poise = { git = "https://github.com/serenity-rs/poise", branch = "develop" }
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
serde_with = { version = "2.3.1", features = ["json"] }
tokio = { version = "1.26.0", features = ["tokio-macros", "rt-multi-thread"] }
ureq = { version = "2.6.2", features = ["json", "serde"] }
