[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "0.11.1", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
tokio = { version = "1.26.0", features = ["macros"] }
